# STL-algorithms-study

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
include/: operators.h  point.h  rectangle.h
test/: CMakeLists.txt  adjacent_find.cpp  all_of.cpp  count.cpp  equal.cpp  for_each.cpp  is_sorted.cpp  minmax.cpp  operators.h  partition.cpp  point.h  rectangle.h  set_difference.cpp  set_intersection.cpp  set_symmetric_difference.cpp  set_union.cpp
